Added Italian, updated DiscordRPC, started working on buttons

--- a/CustomRPC/About.de.resx
+++ b/CustomRPC/About.de.resx
@@ -131,6 +131,6 @@
     <value>Schließen</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Über...</value>
+    <value>Über…</value>
   </data>
 </root>
