--- a/CustomRPC/Strings.ru.resx
+++ b/CustomRPC/Strings.ru.resx
@@ -120,10 +120,6 @@
   <data name="error" xml:space="preserve">
     <value>Ошибка</value>
   </data>
-  <data name="errorCannotConnect" xml:space="preserve">
-    <value>Не удаётся подключиться к клиенту Discord.
-Вы уверены, что он запущен?</value>
-  </data>
   <data name="errorNoID" xml:space="preserve">
     <value>ID не указан!</value>
   </data>
@@ -156,5 +152,10 @@
   </data>
   <data name="statusError" xml:space="preserve">
     <value>Ошибка подключения (Неправильный ID?)</value>
+  </data>
+  <data name="errorCannotConnect" xml:space="preserve">
+    <value></value>
+    <comment>Не удаётся подключиться к клиенту Discord.
+Вы уверены, что он запущен?</comment>
   </data>
 </root>
