--- a/CustomRPC/About.it.resx
+++ b/CustomRPC/About.it.resx
@@ -117,20 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="labelMadeBy.Location" type="System.Drawing.Point, System.Drawing">
-    <value>146, 93</value>
-  </data>
-  <data name="labelMadeBy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 19</value>
-  </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>Разработал: maximmax42</value>
+    <value>Creato da: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
-    <value>Закрыть</value>
+    <value>Chiudi</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>О программе…</value>
+    <value>Informazioni su…</value>
   </data>
 </root>
