--- a/CustomRPC/About.resx
+++ b/CustomRPC/About.resx
@@ -280,7 +280,7 @@ Presence Manager</value>
     <value>CenterParent</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>About...</value>
+    <value>About…</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>About</value>
