--- a/CustomRPC/Strings.resx
+++ b/CustomRPC/Strings.resx
@@ -123,7 +123,7 @@
   <data name="errorCannotConnect" xml:space="preserve">
     <value>Can't connect to Discord client.
 Are you sure it's running?</value>
-    <comment>Unused</comment>
+    <comment>@Invariant Unused</comment>
   </data>
   <data name="errorNoID" xml:space="preserve">
     <value>No ID specified!</value>
