--- a/CustomRPC/UpdatePrompt.it.resx
+++ b/CustomRPC/UpdatePrompt.it.resx
@@ -117,20 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="labelMadeBy.Location" type="System.Drawing.Point, System.Drawing">
-    <value>146, 93</value>
-  </data>
-  <data name="labelMadeBy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 19</value>
-  </data>
-  <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>Разработал: maximmax42</value>
-  </data>
-  <data name="buttonClose.Text" xml:space="preserve">
-    <value>Закрыть</value>
-  </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>О программе…</value>
+    <value>Aggiornamento disponibile</value>
+  </data>
+  <data name="buttonNotNow.Text" xml:space="preserve">
+    <value>Non ora</value>
+  </data>
+  <data name="buttonSkipUpdate.Text" xml:space="preserve">
+    <value>Salta questa versione</value>
+  </data>
+  <data name="buttonUpdate.Text" xml:space="preserve">
+    <value>Si</value>
+  </data>
+  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
+    <value>Non controllare più gli aggiornamenti</value>
+  </data>
+  <data name="labelQuestion.Text" xml:space="preserve">
+    <value>Vuoi scaricare questo aggiornamento?</value>
+  </data>
+  <data name="labelVersionsText.Text" xml:space="preserve">
+    <value>Versione corrente:
+Ultima versione:</value>
   </data>
 </root>
